Ensure text remains visible during webfont load

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 @font-face {
   font-family: "SHANTELL_SANS";
-  src: 
-    url("../src/fonts/Shantell_Sans/ShantellSans-VariableFont_BNCE\,INFM\,SPAC\,wght.ttf") format('truetype');
+  src: url("../src/fonts/Shantell_Sans/ShantellSans-VariableFont_BNCE\,INFM\,SPAC\,wght.ttf")
+    format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 html {
@@ -20,8 +21,7 @@ body,
 input,
 textarea,
 button {
-  font-family: 'SHANTELL_SANS';
-  font-display: swap;
+  font-family: "SHANTELL_SANS", "Segoe Print", "Apple Casual", "Chilanka";
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
